--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <!-- create a button which on click makes appear a alert message with a title 
         <button @click ="greetings">Alert User</button> -->
 
-        <!-- 2nd livecoding -->
+        <!-- 2nd livecoding
         <h1 v-bind:class="colorClass">titolo Vue</h1>
-        <button @click ="changeColor">click me</button>
+        <button @click ="changeColor">click me</button> -->
     </div>
 
 
