--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </style>
 </head>
 <body>
+     <!-- livecodings 17th may-monday -->
     <div id="root">
+       
    <!--  1st livecoding v-model
 
          <label for="">Name</label>
@@ -37,7 +39,24 @@
         <!-- 2nd livecoding
         <h1 v-bind:class="colorClass">titolo Vue</h1>
         <button @click ="changeColor">click me</button> -->
+
+
+        <!-- livecoding 18th may-tuesday -->
+            <!-- 1st livecoding
+            <ul>
+                <li v-for = "movie in movies">{{movie}}</li>
+            </ul> -->
+
+            
+            <ul>
+                <li v-for="numero in 100">{{numero}}</li>
+            </ul>
+
+
+
+
     </div>
+
 
 
     <!-- VUE JS -->
@@ -45,4 +64,4 @@
     <!-- JS -->
     <script src="./main.js"></script>
 </body>
-</html>
+</html> 
